# jpreprocess-unidic

./: Cargo.toml
crates/jpreprocess-core/src/: accent_rule.rs  cform.rs  word_entry.rs
crates/jpreprocess-core/src/ctype/: keiyoushi.rs  mod.rs
crates/jpreprocess-core/src/pos/: doushi.rs  hojokigou.rs  joshi.rs  kandoushi.rs  keijoushi.rs  keiyoushi.rs  meishi.rs  mod.rs  setsubizi.rs
crates/jpreprocess-core/src/pronunciation/: mod.rs  mora.rs  mora_dict.rs  mora_enum.rs  phoneme.rs
crates/jpreprocess-jpcommon/src/word_attr/: cform.rs  ctype.rs  pos.rs
crates/jpreprocess-njd/src/njd_set/accent_phrase/: mod.rs
crates/jpreprocess-njd/src/njd_set/accent_type/: mod.rs
crates/jpreprocess-njd/src/njd_set/digit/: mod.rs
crates/jpreprocess-njd/src/njd_set/digit/digit_sequence/: score.rs
crates/jpreprocess-njd/src/njd_set/pronunciation/: mod.rs
crates/jpreprocess-njd/src/njd_set/unvoiced_vowel/: mod.rs
crates/jpreprocess-unidic-convert_unidic/: Cargo.toml
crates/jpreprocess-unidic-convert_unidic/src/: main.rs
