[package]
name = "jpreprocess-unidic-convert_unidic"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
byteorder.workspace = true
anyhow.workspace = true
once_cell.workspace = true
regex.workspace = true
lindera-core.workspace = true
lindera-ipadic-builder.workspace = true
lindera-tokenizer.workspace = true

serde.workspace = true
csv.workspace = true
jpreprocess-core.workspace = true

[[bin]]
name = "convert_unidic"
path = "src/main.rs"


